header and nav height restriction prevented the collapse from appearing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,9 @@
-header {
+/* header {
     height: 3.5rem;
 }
 nav {
     height: 3.5rem;
-}
+} */
 
 .list-container {
     display: grid;
